<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navmenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navheader"
        app:menu="@menu/main_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/mainbackground"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="Welcome"
                app:titleTextColor="@color/black" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:padding="15dp"
                    android:text="@string/madad"
                    android:textAlignment="textStart"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/event_recycle"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                </androidx.recyclerview.widget.RecyclerView>

                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="100dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="73dp"
                    android:background="@color/white"
                    app:columnCount="3"
                    app:rowCount="3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="oxygen"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="100dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/Home"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/oxygen_cylinder"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:onClick="onlineDoc"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="100dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/mail1"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/online_doctor"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:onClick="findMedicine"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="100dp"
                                android:layout_height="75dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/Login"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/find_medicine"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="mealActivity"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="100dp"
                                android:layout_height="75dp"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/Mail3"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/meals_delivery"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:onClick="ForBed"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        android:padding="10dp"
                        app:layout_column="0"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="2"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="134dp"
                                android:layout_height="70dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/Bed"
                                android:layout_width="122dp"
                                android:layout_height="50dp"
                                android:text="Bed Available"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="152dp"
                        android:layout_height="wrap_content"
                        android:onClick="CovidBed"
                        app:cardBackgroundColor="#E7FFFD"
                        app:cardCornerRadius="8dp"
                        app:layout_column="1"
                        app:layout_columnSpan="1"
                        app:layout_columnWeight="1"

                        app:layout_gravity="fill"
                        app:layout_row="2"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:onClick="ShareCare"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView5"
                                android:layout_width="134dp"
                                android:layout_height="75dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                android:layout_marginLeft="10dp"
                                app:srcCompat="@drawable/coronavirus" />

                            <TextView
                                android:id="@+id/Bed1"
                                android:layout_width="122dp"
                                android:layout_height="50dp"
                                android:layout_marginLeft="30dp"
                                android:text="Share And Care"
                                android:textAlignment="center"
                                android:textColor="@color/black"
                                android:layout_marginRight="8dp"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.gridlayout.widget.GridLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>